--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ pyinstaller==6.3.0
 pyinstaller-hooks-contrib==2024.0
 PyJWT==2.8.0
 pyparsing==3.1.1
-pypiwin32==223
+pywin32==303; platform_system=="Windows"
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
