--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ decorator==5.1.1
 Django==5.0.1
 django-cors-headers==4.3.1
 django-filter==23.5
+whitenoise==5.3.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 et-xmlfile==1.1.0
